# PyRKViewer

./: .default-settings.json  .gitignore  .readthedocs.yaml  IodineAPI.py  LICENSE  Pipfile  README.md  Tutorial.md  bezier.py  build.sh  dark-settings.json  dev-requirements.txt  example.py  graphicsUtils.py  helloworld.py  helloworld.spec  iodine.py  iodineTest.py  main.py  main.spec  overlay.py  pyproject.toml  req-dev.txt  requirements-dev.txt  requirements-sbml.txt  requirements-simulation.txt  requirements.txt  requirements.txt.old  rkviewer.spec  rkviewer.stat  sbml-requirements.txt  settings.json  stat.py  unix_build.sh  win_build.bat
.github/workflows/: python-app.yml
.rkviewer/: .default-settings.json  settings.json
Documentation/docs/source/: conf.py  plugins.rst
coyote-gui-plugins/: align_circle.py  arrow_designer.py
docs/: mkdocs.yml  rkpluginModules.rst
docs/source/: CodeDocumentation.rst  CoreDevelopment.rst  ForDevelopers.rst  InternalJSONModelFormat.rst  PluginDevelopment.rst  PluginReference.rst  QuickStart.rst  Reference.rst  Tutorial.rst  api.rst  arrow_designer.rst  canvas.rst  classes.rst  conf.py  config.rst  events.rst  index.rst  plugins.rst  pluginsModules.rst  requirements.txt  rkpluginModules.rst  rkviewer.rst
docs/source/rkviewer/: modules.rst  rkviewer.canvas.rst  rkviewer.rst
examples/: AutoLayout.xml  GUI.xml  Jana_wolf.xml  Jana_wolf_dot.xml  StucturalAnalysis.xml  ecoli.xml
plugins/: AutoLayout.py  addReaction.py  addReaction_HMS.py  addReaction_HMS_B.py  addReactions.py  align_circle.py  arrange.py  arrow_designer.py  autoLayout-CarmenPC.py  autoLayout.py  autoLayoutOld.py  captureSBML.py  color_selected.py  conservedCycle.py  disco.py  duplicateReaction.py  event_logger.py  exportAntimony.py  exportSBML.py  importSBML.py  networkX.oldVersion  networkX.py  networkX.xxx  randomNetwork.py  structuralAnalysis.py  test.py
rkplugin/: api.py  base.py  canvas.py  events.py  plugins.py
rkviewer/: __init__.py  canvas.py  canvasutils.py  canvaswidgets.py  config.py  controller.py  events.py  forms.py  io.py  iodine.py  main.py  mvc.py  plugin_manage.py  settings.py  types.py  utils.py  view.py  widgets.py
rkviewer/canvas/: canvas.py  data.py  elements.py  events.py  geometry.py  observer.py  overlays.py  reactions.py  state.py  utils.py  widgets.py  wx.py
rkviewer/json/: .default-settings.json  dark-settings.json  default-settings.json  settings.json
rkviewer/plugin/: api.py  canvas.py  classes.py  events.py
rkviewer_plugins/: addReaction.py  align_circle.py  arrow_designer.py  duplicateReaction.py  eventPlugin1.py  exportAntimony.py  exportSBML.py  importSBML.py  modelMetrics.py  networkX.py  randomNetwork.py  simulateNetwork.py  structuralAnalysis.py
scripts/: gen_requirements.py
temp-plugins/: addReaction.py  structuralAnalysis.py
test/: test.json  test_comp.json  test_comp_w_rxn.json  test_compositeShape.json  test_deserialization.py  test_rxn.json  test_serialization.py  test_utils.py  utils.py
test/api/: common.py  test_compartment.py  test_node.py  test_reaction.py  test_shapes.py
test/canvas/: test_utils.py
test/rkplugin/: test_api.py  test_nodes.py
test/rkviewer/: test_utils.py
