[tool.poetry]
name = "coyote-gui"
version = "0.0.1"
description = "Extensible visualization and editing tool for reaction networks."
authors = ["Gary Geng <xiaog3@uw.edu>", "Jin Xu <jxu2019@uw.edu>",
"Carmen Perena-Cortes <cperena@outlook.com>", "Evan Yip <evan@yipsite.net>",
"Nhan D. Nguyen <nnguyen19@ole.augie.edu>", "Herbert M. Sauro <hsauro@uw.edu>"]
packages = [
    { include = "rkviewer" },
]

[tool.poetry.dependencies]
python = "^3.6"
wxPython = "4.1.1"
sortedcontainers = "^2.3.0"
marshmallow = "^3.11.1"
commentjson = "^0.9.0"
dataclasses = { version = "^0.8", python = "~3.6" }
marshmallow-polyfield = "^5.10"
tellurium = { version = "^2.2.0", optional = true }
sbml2matlab = { version = "1.2.3", optional = true }
networkx = { version = "^2.5.1", optional = true }
simplesbml = { version = "^2.2.0", optional = true }
python-libsbml = { version = "^5.18.0", optional = true }

[tool.poetry.dev-dependencies]
Sphinx = "^3.5.4"
sphinx-rtd-theme = "^0.5.2"
sphinx-autodoc-typehints = "^1.12.0"
pylint = "^2.8.2"
autopep8 = "^1.5.7"
tuna = "^0.5.5"

[tool.poetry.extras]
sbml = ["tellurium", "sbml2matlab", "networkx", "simplesbml", "python-libsbml"]

[tool.poetry.scripts]
coyote = 'rkviewer.main:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
