[tool.poetry]
name = "SBcoyote"
version = "1.5.2"
description = "SBcoyote: An Extensible Python Based Reaction Editor and Viewer."
readme = "README.md"
authors = ["Jin Xu and Gary Geng et al <jin.xu.phys@gmail.com>"]
packages = [
    #{ include = "*" }
    { include = "rkviewer"},
    { include = "rkviewer_plugins"},
]
classifiers=[
    'Development Status :: 4 - Beta',

    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Topic :: Software Development :: Build Tools',

    'Operating System :: Microsoft :: Windows',
    'Operating System :: MacOS',
    'Operating System :: POSIX :: Linux',

    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',

    'Topic :: Scientific/Engineering :: Visualization',
]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
wxPython = "^4.1.1"
sortedcontainers = "^2.3.0"
marshmallow = "^3.11.1"
commentjson = "^0.9.0"
dataclasses = { version = "^0.8", python = "~3.6" }
marshmallow-polyfield = "^5.10"
wheel = "*"
requests = "*"
traitlets = "*"
networkx = { version = ">=2.5.1" }
simplesbml = { version = "^2.2.0"}
python-libsbml = { version = "^5.18.0" }
pandas = { version = ">=1.3.0" }
SBMLDiagrams = { version = ">=1.3.4"}
tellurium = { version = "^2.2.1", optional = true }

[tool.poetry.dev-dependencies]
Sphinx = "^3.5.4"
sphinx-rtd-theme = "^0.5.2"
sphinx-autodoc-typehints = "^1.12.0"
pylint = "^2.8.2"
autopep8 = "^1.5.7"
tuna = "^0.5.5"

[tool.poetry.extras]
simulation = ["tellurium"]

[tool.poetry.scripts]
SBcoyote = 'rkviewer.main:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://github.com/sys-bio/SBcoyote"
